# UltraFlwr

./: .gitignore  Dockerfile  README.md  personalchanges.md  pyproject.toml  setup.py
FedYOLO/: config.py
FedYOLO/data_partitioner/: dirichlet_split.py  fed_split.py  fedssar_split.py
FedYOLO/test/: test.py  test.sh
FedYOLO/test/unit/: test_dirichlet_split.py  test_fed_split.py  test_fedssar_split.py
FedYOLO/train/: prompt.md  strategies.py  yolo_client.py  yolo_server.py
FedYOLO/train/FedAvg_baseline_0/train/: args.yaml  results.csv
FedYOLO/train/FedAvg_baseline_1/train/: args.yaml  results.csv
FedYOLO/unit_tests/: test_strategies.py
FedYOLO/yolo_configs/: yolo11n_bccd.yaml
docs/: local_docker.md  local_venv.md
outputs/FedAvg_bccd_dirichlet/client_0/train/: args.yaml  results.csv
outputs/FedAvg_bccd_dirichlet/client_0/train2/: args.yaml  results.csv
outputs/FedAvg_bccd_dirichlet/client_1/train/: args.yaml  results.csv
outputs/FedAvg_bccd_dirichlet/client_1/train2/: args.yaml  results.csv
outputs/FedAvg_bccd_fedssar/client_0/train/: args.yaml  results.csv
outputs/FedAvg_bccd_fedssar/client_0/train2/: args.yaml  results.csv
outputs/FedAvg_bccd_fedssar/client_1/train/: args.yaml  results.csv
scripts/central_train_and_test/: local_test_only.py  local_train_and_test.py  organize_log_results_local_train.py  run_local_eval.sh  run_local_train_and_test.sh  run_local_yolov11.py  summarize_eval_results.py
scripts/docker/: create_docker_image.sh
scripts/federated_train_and_test/: benchmark.sh  run.py  run.sh  run_fedyolo.py  test.sh  train.sh
(+6 files in other folders)
