[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FedYOLO"
version = "1.0.0"
description = ""
license = "AGPL-3.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "yang"

[tool.flwr.app.components]
serverapp = "FedYOLO.train.yolo_server:app"
clientapp = "FedYOLO.train.yolo_client:app"

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
